<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/logout"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="7dp"
        android:text="@string/logout"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:contentDescription="@string/user_image"
        android:background="@drawable/circular_image"
        android:cropToPadding="true" />

    <TextView
        android:id="@+id/user_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/text_background"/>

    <Button
        android:id="@+id/goto_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/search_user_details"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:padding="10dp"/>
</LinearLayout>
